# ai-session-capture

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  config.toml.example  pyproject.toml
docs/: ARCHITECTURE.md  DEFERRED.md
docs/adr/: 0001-toml-over-yaml-for-config.md  0002-structural-drops-before-regex.md  0003-per-session-layout.md  0004-derive-dont-configure-claude-root.md  0005-multi-source-codex-adapter.md  0006-multi-machine-ingestion.md
scheduling/: launchd.plist.tmpl  systemd.service.tmpl  systemd.timer.tmpl
scripts/: install.sh  uninstall.sh
src/ai_session_capture/: __main__.py  cli.py  codex_parser.py  config.py  layout.py  mcp_server.py  parser.py  redact.py  render.py  search.py  state.py
src/ai_session_capture/templates/: daily.md.j2  daily_index.md.j2  session.md.j2
src/claude_session_capture/: __init__.py  __main__.py  cli.py  codex_parser.py  config.py  layout.py  mcp_server.py  parser.py  render.py  search.py  state.py
src/claude_session_capture/templates/: session.md.j2
tests/: conftest.py  test_cli.py  test_codex_parser.py  test_layout.py  test_mcp_server.py  test_parser.py  test_redact.py  test_render.py  test_search.py  test_state.py
