[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-session-capture"
version = "0.1.0"
description = "Daily human-readable capture of Claude Code sessions with aggressive secret redaction."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Daniel Harcek", email = "daniel@harcek.info" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "jinja2>=3.1",
    "platformdirs>=4.0",
]

[project.scripts]
claude-session-capture = "claude_session_capture.cli:main"

[project.urls]
Homepage = "https://github.com/harcek/ai-session-capture"
Repository = "https://github.com/harcek/ai-session-capture"
Issues = "https://github.com/harcek/ai-session-capture/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
mcp = [
    "mcp>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_session_capture"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
